# Nile-ViT

./: .dodsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: class_weights_v1.json  meteo_norm_v1.json  roi_tiles.json
configs/splits/: v1.json  v1_temporal.json
docs/: B2_CLIMATOLOGY.md  HLS_STREAMING.md  M4_PACKAGING.md  PROJECT_PLAN.md  PROJECT_STATUS.md  TECHNICAL_DESIGN.md
nilevit/: __init__.py  _environment.py  cli.py  dataset.py  hls_bands.py  hls_stac.py  meteo.py  roi_tiles.py  schemas.py  tiles.py
nilevit/labels/: __init__.py
nilevit/splits/: __init__.py
notebooks/: 00_prithvi_smoke_test.ipynb
scripts/: pull_year.py
scripts/data/: 01_download_hls.py  02_download_era5.py  03_download_chirps.py  04_download_modis.py  05a_harmonize.py  05b_tile.py  06a_climatology_vhi.py  06b_climatology_precip.py  06c_climatology_temp.py  06d_climatology_spei.py  07_make_splits.py  assemble_dataset.py  make_roi_tiles.py  package_tile_meteo.py  probe_pc_hls.py
scripts/labels/: build_labels.py  package_tile_labels.py
tests/: test_05a_harmonize.py  test_05b_stac.py  test_05b_tile.py  test_06a_climatology_vhi.py  test_06b_climatology_precip.py  test_06c_climatology_temp.py  test_06d_climatology_spei.py  test_build_labels.py  test_chirps_download.py  test_dataset.py  test_era5_download.py  test_hls_download.py  test_hls_stac.py  test_labels.py  test_meteo.py  test_modis_download.py  test_package_tile_labels.py  test_package_tile_meteo.py  test_pull_year.py  test_roi_tiles.py  test_schemas.py  test_smoke.py  test_splits.py  test_tiles.py
