[project]
name = "nilevit"
version = "0.1.0"
description = "Multimodal Vision Transformer for detecting compound heat-drought-vegetation-stress events over the Nile Delta and Eastern Mediterranean."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ammar Khattab" },
]
requires-python = ">=3.11,<3.12"
keywords = [
    "climate",
    "remote-sensing",
    "vision-transformer",
    "lora",
    "multimodal",
    "mena",
    "earth-observation",
    "compound-extremes",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
# Notes:
# - torch/torchvision are routed through PyTorch's CUDA 12.1 index on
#   win32/linux (see [tool.uv.sources] below). On macOS they install from
#   PyPI (MPS-enabled).
# - Heavy geospatial / GeoFM deps are loaded lazily in submodules so that
#   tests / lint can run without them present.
# ---------------------------------------------------------------------------
dependencies = [
    # core ML
    "torch>=2.4,<2.6",
    "torchvision>=0.19,<0.21",

    # geospatial foundation models
    "terratorch>=1.0.1,<2.0",
    "peft>=0.13",
    "transformers>=4.46",
    "datasets>=3.0",

    # data access
    "earthaccess>=0.10",
    "cdsapi>=0.7",
    "pystac-client>=0.8",
    "stackstac>=0.5",
    "planetary-computer>=1.0",

    # geospatial stack
    "rioxarray>=0.17",
    "xarray>=2024.10",
    "zarr>=2.18,<3",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",

    # numerical
    "numpy>=1.26,<2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",

    # plotting
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # ops
    "tqdm>=4.66",
    "wandb>=0.18",
    "pydantic>=2.8",
    "typer>=0.13",
    "rich>=13.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]
demo = [
    "gradio>=5.0",
    "huggingface_hub>=0.25",
]

[project.urls]
Repository = "https://github.com/ammarkhattab/Nile-ViT"
Issues = "https://github.com/ammarkhattab/Nile-ViT/issues"

[project.scripts]
nilevit = "nilevit.cli:app"

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nilevit"]

# ---------------------------------------------------------------------------
# uv: route torch through the CUDA 12.1 wheel index on Linux/Windows.
# macOS falls through to PyPI (MPS / CPU wheels).
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

# ---------------------------------------------------------------------------
# Tooling: ruff (lint + format), mypy (type-check), pytest (tests)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "build",
    "dist",
    "notebooks",
    "*.ipynb_checkpoints",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["nilevit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
    "network: marks tests requiring network access",
]
